--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
 
         android:allowBackup="true"
-        android:icon="@drawable/ireland"
+        android:icon="@drawable/c_ireland"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
